feat(app): sourceId on Article and fan-out in catalog